# kite-agent

./: .gitattributes  .gitignore  Cargo.toml  README.md  kite.example.toml  user-agents.txt
examples/: class_list.rs  gpa.rs  login.rs  major_list.rs  profile.rs  score_list.rs  suggested_course_list.rs  timetable.rs
examples/console/: main.rs  page.rs  session.rs
html/: README.md  scorelist.html  成绩查询页面.html  成绩查询页面2.html  成绩详情.html  我的课表页面.html  教务管理个人信息页.html  教学计划查询页面.html  消费记录页面.html  电费查询页面.html  电费查询页面_房间号无效.html  第二课堂得分活动页面.html  第二课堂得分页面.html  第二课堂最近活动.html  第二课堂详情页面.html  第二课堂详情页面2.html  课程列表页面.html
src/: actions.rs  agent.rs  communication.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  models.rs  net.rs  network.rs  parser.rs  parsers.rs  service.rs  session.rs  user_agent.rs  zftool.rs
src/actions/: auth.rs
src/communication/: agent.rs  error.rs  process.rs  request.rs
src/models/: course.rs
src/net/: auth.rs  availability.rs  client.rs  session.rs  user_agent.rs
src/parser/: bill.rs  edu.rs  expense.rs  library.rs  sc.rs  second_course.rs
src/parser/course/: list.rs  plan.rs  score.rs  select.rs
src/parser/edu/: classes.rs  profile.rs  score.rs  score_detail.rs  select_course.rs  timetable.rs
src/parser/sc/: detail.rs  list.rs  score.rs
src/parser/second_course/: details.rs  list.rs  score.rs
src/parsers/: bill.rs  course.rs  expense.rs  second_course.rs
src/parsers/course/: list.rs  plan.rs  score.rs  select.rs
src/parsers/second_course/: details.rs  list.rs  score.rs
src/service/: auth.rs  bill.rs  course.rs  edu.rs  error.rs  expense.rs  library.rs  report.rs  sc.rs
src/service/edu/: auth.rs  client.rs  env.rs  exam.rs  user.rs
src/zftool/: client.rs  config.rs  error.rs  parsers.rs  session.rs
src/zftool/client/: environment.rs  user.rs
src/zftool/parsers/: classes.rs  profile.rs  score.rs  select_course.rs  timetable.rs
tools/: .gitignore  balance_updater.py
tools/courselist-parser/: course-list.py
tools/sc-crawler/: check.py  download_activity_list.py  download_all_activities.py  tag.py
tools/teaching-plan/: .gitignore  crawler.py  pc_parser.py
