[package]
name = "kite-agent"
version = "0.1.0"
authors = ["sunnysab <sunnysab@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Common tools
rand = "0.7"
lazy_static = "1.4"
regex = "1"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }

# Network related
scraper = "0.12"
tokio-tungstenite = { version = "0.11", features = ["tls"] } # Websocket library
reqwest = { version = "0.10", features = ["cookies", "rustls-tls"] }


# Database
sled = "0.34"
bincode = "1.3"

# Encryption and code
aes = "0.4"
base64 = "0.12"
block-modes = "0.5"
urlencoding = "1.0"

[dev-dependencies]
structopt = { version = "0.3", default-features = false }
prettytable-rs = "^0.8"