[package]
name = "kite-agent"
version = "0.1.0"
authors = ["sunnysab <sunnysab@yeah.net>"]
edition = "2018"

# More details in https://doc.rust-lang.org/cargo/reference/profiles.html.
[profile.release]
opt-level = 3
lto = "thin"
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Common tools
anyhow = "1.0"
rand = "0.8"
lazy_static = "1.4"
regex = "1"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tower = { version = "0.4", features = ["full"] }
tokio-tower = "0.5"
async-bincode = "0.6"
slab = "0.4"
async-trait = "0.1"
serde_json = "1.0"
const_format = "0.2"

# Network related
scraper = "0.12"
reqwest = { version = "0.11", features = ["cookies", "rustls-tls", "socks", "json"] }

# Database
sled = "0.34"
bincode = "1.3"

# Encryption and code
aes = "0.6"
base64 = "0.13"
block-modes = "0.7"
urlencoding = "2"
rsa = "0.5.0"

# Image process
tesseract = "0.9"
image = "0.23"
imageproc = "0.22"

# Allocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3"

[dev-dependencies]
structopt = { version = "0.3", default-features = false }
prettytable-rs = "0.8"